# fatal.rs

./: Cargo.toml
src/: lib.rs
