[package]
name = "fatal"
version = "0.1.0"
authors = ["Hadar Galant <19251133+hgalant@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/hgalant/fatal.rs"

[features]
default = ["color"]
color = ["termcolor"]

[dependencies]
termcolor = { version = "1.1", optional = true }